Fix z-index for message

--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -2,7 +2,12 @@
   "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
   "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 @primary-color: #3366cc;
-@zindex-dropdown: 1075;
-@zindex-modal: 1076;
+
+@zindex-dropdown: 1080;
+@zindex-modal: 1090;
 @zindex-modal-mask: @zindex-modal;
+@zindex-message: 1100;
+@zindex-notification: @zindex-message;
+@zindex-image: 1110;
+
 @tooltip-bg: @primary-color;
